fix calendar and other widgets being covered by task form footer

--- a/src/css/style.less
+++ b/src/css/style.less
@@ -2698,7 +2698,7 @@ form[name='compose'] {
       flex-direction: column;
       height: 400px;
       min-height: initial;
-      overflow-y: scroll;
+      overflow-y: visible;
 
       > * {
         width: 100%;
